--- a/docs/posts/01wk-2.out.ipynb
+++ b/docs/posts/01wk-2.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "<https://youtu.be/playlist?list=PLQqh36zP38-yKD2iq8nJKXMrTG9n_hFBv&si=QUiXul0DWcAYLyyy>"
       ],
-      "id": "d6885d79-1405-425a-89b4-1f3daab1d891"
+      "id": "58eb41d5-bd36-453a-b856-1eae5734d547"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
         "\n",
         "## B. 회귀모형에서 데이터 생성"
       ],
-      "id": "813e88e1-1c83-4a48-9c52-22bfd0272931"
+      "id": "ba9267e8-f534-4740-bd39-78afd8db6647"
     },
     {
       "cell_type": "code",
@@ -119,7 +119,7 @@
         "\n",
         "`-` 더 쉽게 말하면 아래의 그림을 보고 `적당한` 추세선을 찾는것이다."
       ],
-      "id": "9fb5e84e-84a7-46ac-81a7-b57a3042dfa4"
+      "id": "13913ecc-e5e3-48e2-9e2d-828931116b7e"
     },
     {
       "cell_type": "code",
@@ -146,7 +146,7 @@
         "`-` 시도: $(\\hat{w}_0,\\hat{w}_1)=(-5,10)$을 선택하여 선을 그려보고\n",
         "적당한지 판단."
       ],
-      "id": "7c80ecec-441b-4488-b66f-ca7d264c7a37"
+      "id": "b353b810-ec38-4b14-ba1c-6529d6d2fad6"
     },
     {
       "cell_type": "code",
@@ -175,7 +175,7 @@
         "\n",
         "`-` 벡터표현으로 주황색점선을 계산"
       ],
-      "id": "38ad0e14-97a3-4909-9ff4-f291875abc52"
+      "id": "981c9356-e09b-4967-86ab-6a2d0e8d9234"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`-` $\\hat{w}_0=-5, \\hat{w}_1 = 10$ 으로 설정하고 (왜? 그냥) 임의의 선을\n",
         "그어보자."
       ],
-      "id": "81f58e0e-e533-4817-8651-0b80a2f35ed6"
+      "id": "4240a8c2-9a43-4eea-93ec-1b5616111b88"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "-   끝에 requires_grad=True는 나중에 미분을 위한 것"
       ],
-      "id": "2a20c337-ab2f-427a-8584-59181f4a0dee"
+      "id": "191a3e94-e719-4e1d-a867-94880531906b"
     },
     {
       "cell_type": "code",
@@ -318,7 +318,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "8aa1442e-9a27-4c50-9248-19f04c340322"
+      "id": "7176fb0f-6762-4e19-ac98-02ad73b3c630"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
         "$\\frac{\\partial}{\\partial {\\bf W}}loss(w_0,w_1)$의 계산이 필요한데, 이를\n",
         "위해서 벡터미분이 필요하다. (`loss.backward()`로 하면된다)"
       ],
-      "id": "cf363a44-dfb9-43fb-82c7-b96250ed31ad"
+      "id": "97fa7849-40c3-4750-a4ca-316db4c1182b"
     },
     {
       "cell_type": "code",
@@ -446,7 +446,7 @@
         "\n",
         "`-` (-5,10)에서 loss의 순간기울기 값은 `What.grad`로 확인가능하다."
       ],
-      "id": "6ec0afed-e286-4fb3-9337-d81cfdf8b7fd"
+      "id": "8594c625-c306-4b0f-9c33-3e26af960333"
     },
     {
       "cell_type": "code",
@@ -472,7 +472,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W} }loss(w_0,w_1)=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "ed37621c-29dd-4a56-b9a2-00579013f737"
+      "id": "c31a4e93-7e8a-4913-8ce7-b7e01b0e1871"
     },
     {
       "cell_type": "code",
@@ -507,7 +507,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial w_1}loss(w_0,w_1) \\approx \\frac{loss(w_0,w_1+h)-loss(w_0,w_1)}{h}$"
       ],
-      "id": "38b14ec7-a7ad-443d-998f-4543e2a96a67"
+      "id": "d4063453-c1c7-47e1-b66f-dade53bcc97f"
     },
     {
       "cell_type": "code",
@@ -539,7 +539,7 @@
         "\n",
         "`-` 수정전, 수정하는폭, 수정후의 값은 차례로 아래와 같다."
       ],
-      "id": "6e9965f4-2bc1-41b8-b75b-5776130bbd7a"
+      "id": "ae9a41d4-ec62-4b6f-89ee-c0bd138f3057"
     },
     {
       "cell_type": "code",
@@ -575,7 +575,7 @@
       "source": [
         "`-` Wbefore, Wafter 계산"
       ],
-      "id": "c2b489be-f2b2-41e8-a07f-63d91fe5ee2a"
+      "id": "2e4be8ca-6287-455e-9def-88c876b2668f"
     },
     {
       "cell_type": "code",
@@ -595,7 +595,7 @@
       "source": [
         "`-` Wbefore, Wafter의 시각화"
       ],
-      "id": "01506b37-1e15-457e-ac4d-ce2eb292a347"
+      "id": "cb488ac2-f4cd-4179-b995-b93a9cd1d3a1"
     },
     {
       "cell_type": "code",
@@ -625,7 +625,7 @@
         "\n",
         "`-` 이 과정은 단계1-2를 반복하면 된다."
       ],
-      "id": "466bdc3d-2b63-4b77-9acb-c1fa542ca668"
+      "id": "1e884b94-3091-435d-a26c-4ba5320d13bc"
     },
     {
       "cell_type": "code",
@@ -659,9 +659,11 @@
       "source": [
         "-   원래 철자는 epoch이 맞아요\n",
         "\n",
-        "`-` 반복결과는?! (최종적으로 구해지는 What의 값은?!) - 참고로 true"
+        "`-` 반복결과는?! (최종적으로 구해지는 What의 값은?!)\n",
+        "\n",
+        "-   참고로 true 는 (2.5, 4) 였음!!"
       ],
-      "id": "360b770b-2c08-41c9-a169-3a6881f662c8"
+      "id": "1057adde-c173-4816-ada4-de436b5a7839"
     },
     {
       "cell_type": "code",
@@ -679,7 +681,7 @@
       "source": [
         "`-` 반복결과를 시각화하면?"
       ],
-      "id": "015a5b23-54b5-4aee-b47c-8673de39ea48"
+      "id": "04758c48-9eef-49e7-a15f-1bc7621a1075"
     },
     {
       "cell_type": "code",
@@ -708,7 +710,7 @@
         "\n",
         "`-` 뭐 할까? ㅎㅎ"
       ],
-      "id": "64d94a66-29fa-45f6-b8a1-7282dc6fdb6f"
+      "id": "dba91daa-d20e-4d25-9a88-bb40268c36d2"
     }
   ],
   "nbformat": 4,
