--- a/docs/posts/01wk-2.out.ipynb
+++ b/docs/posts/01wk-2.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "<https://youtu.be/playlist?list=PLQqh36zP38-yKD2iq8nJKXMrTG9n_hFBv&si=QUiXul0DWcAYLyyy>"
       ],
-      "id": "58eb41d5-bd36-453a-b856-1eae5734d547"
+      "id": "8c6018a7-ce17-4511-953e-f4998acecf9c"
     },
     {
       "cell_type": "code",
@@ -40,7 +40,8 @@
         "\n",
         "# 3. ref\n",
         "\n",
-        "`-` 넘파이 문법이 약하다면? (reshape, concatenate, stack)\n",
+        "`-` 넘파이 문법이 약하다면? (reshape, concatenate, stack, row/col\n",
+        "vector)\n",
         "\n",
         "1.  [reshape](https://guebin.github.io/IP2022/2022/04/06/(6%EC%A3%BC%EC%B0%A8)-4%EC%9B%946%EC%9D%BC.html):\n",
         "    넘파이공부 2단계 reshape 참고\n",
@@ -48,6 +49,11 @@
         "2.  [concatenate,\n",
         "    stack](https://guebin.github.io/IP2022/2022/04/11/(6%EC%A3%BC%EC%B0%A8)-4%EC%9B%9411%EC%9D%BC.html):\n",
         "    아래 링크의 넘파이공부 4단계 참고\n",
+        "\n",
+        "3.  3x1 col-vec 선언방법, 1x3 row-vec 선언방법에서 `[[1],[2],[3]]` 혹은\n",
+        "    `[[1,2,3]]` 와 같은 표현이 이해안되면\n",
+        "    <https://guebin.github.io/STBDA2022/2022/03/14/(2주차)-3월14일.html>\n",
+        "    의 첫번째 동영상 12:15 - 22:45 에 해당하는 분량을 학습할 것.\n",
         "\n",
         "# 4. 회귀모형\n",
         "\n",
@@ -62,7 +68,7 @@
         "\n",
         "## B. 회귀모형에서 데이터 생성"
       ],
-      "id": "ba9267e8-f534-4740-bd39-78afd8db6647"
+      "id": "f97541b5-9bf1-45d3-aa0e-0a8ce6b1cce0"
     },
     {
       "cell_type": "code",
@@ -119,7 +125,7 @@
         "\n",
         "`-` 더 쉽게 말하면 아래의 그림을 보고 `적당한` 추세선을 찾는것이다."
       ],
-      "id": "13913ecc-e5e3-48e2-9e2d-828931116b7e"
+      "id": "636d080b-a00a-42a6-b2a1-b722836d529f"
     },
     {
       "cell_type": "code",
@@ -146,7 +152,7 @@
         "`-` 시도: $(\\hat{w}_0,\\hat{w}_1)=(-5,10)$을 선택하여 선을 그려보고\n",
         "적당한지 판단."
       ],
-      "id": "b353b810-ec38-4b14-ba1c-6529d6d2fad6"
+      "id": "a6a0b4bb-03a6-4cb2-ab2a-d73feaeb26f4"
     },
     {
       "cell_type": "code",
@@ -175,7 +181,7 @@
         "\n",
         "`-` 벡터표현으로 주황색점선을 계산"
       ],
-      "id": "981c9356-e09b-4967-86ab-6a2d0e8d9234"
+      "id": "cc61d814-55f5-4e15-9b9b-bbb247fd6f83"
     },
     {
       "cell_type": "code",
@@ -242,7 +248,7 @@
         "`-` $\\hat{w}_0=-5, \\hat{w}_1 = 10$ 으로 설정하고 (왜? 그냥) 임의의 선을\n",
         "그어보자."
       ],
-      "id": "4240a8c2-9a43-4eea-93ec-1b5616111b88"
+      "id": "1e25f758-5e80-412a-ac6a-79502f8513b9"
     },
     {
       "cell_type": "code",
@@ -265,7 +271,7 @@
         "\n",
         "-   끝에 requires_grad=True는 나중에 미분을 위한 것"
       ],
-      "id": "191a3e94-e719-4e1d-a867-94880531906b"
+      "id": "25d66a3d-8d10-4ea4-b5d5-684e5aaefbfc"
     },
     {
       "cell_type": "code",
@@ -318,7 +324,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "7176fb0f-6762-4e19-ac98-02ad73b3c630"
+      "id": "5ab60105-fca9-48a3-a6cc-3c0a9a9a4ea1"
     },
     {
       "cell_type": "code",
@@ -403,7 +409,7 @@
         "$\\frac{\\partial}{\\partial {\\bf W}}loss(w_0,w_1)$의 계산이 필요한데, 이를\n",
         "위해서 벡터미분이 필요하다. (`loss.backward()`로 하면된다)"
       ],
-      "id": "97fa7849-40c3-4750-a4ca-316db4c1182b"
+      "id": "c9fce1c4-b3f2-4eb4-a22c-2ea24bea9502"
     },
     {
       "cell_type": "code",
@@ -446,7 +452,7 @@
         "\n",
         "`-` (-5,10)에서 loss의 순간기울기 값은 `What.grad`로 확인가능하다."
       ],
-      "id": "8594c625-c306-4b0f-9c33-3e26af960333"
+      "id": "42fb8feb-a1d0-42f6-98cb-af6ba31afc0e"
     },
     {
       "cell_type": "code",
@@ -472,7 +478,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W} }loss(w_0,w_1)=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "c31a4e93-7e8a-4913-8ce7-b7e01b0e1871"
+      "id": "29c0024a-3d34-44e2-8cb0-32dab66cbed2"
     },
     {
       "cell_type": "code",
@@ -507,7 +513,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial w_1}loss(w_0,w_1) \\approx \\frac{loss(w_0,w_1+h)-loss(w_0,w_1)}{h}$"
       ],
-      "id": "d4063453-c1c7-47e1-b66f-dade53bcc97f"
+      "id": "e42408f2-4af9-48ff-90dc-ed27c73726ea"
     },
     {
       "cell_type": "code",
@@ -539,7 +545,7 @@
         "\n",
         "`-` 수정전, 수정하는폭, 수정후의 값은 차례로 아래와 같다."
       ],
-      "id": "ae9a41d4-ec62-4b6f-89ee-c0bd138f3057"
+      "id": "f349e04b-166a-4197-81de-f3a5f937cbb2"
     },
     {
       "cell_type": "code",
@@ -575,7 +581,7 @@
       "source": [
         "`-` Wbefore, Wafter 계산"
       ],
-      "id": "2e4be8ca-6287-455e-9def-88c876b2668f"
+      "id": "2d91e527-613c-4cc0-8fdf-f139e94e55f3"
     },
     {
       "cell_type": "code",
@@ -595,7 +601,7 @@
       "source": [
         "`-` Wbefore, Wafter의 시각화"
       ],
-      "id": "cb488ac2-f4cd-4179-b995-b93a9cd1d3a1"
+      "id": "4604f177-c5f9-4ee0-8c0b-f3ab9cefb97f"
     },
     {
       "cell_type": "code",
@@ -625,7 +631,7 @@
         "\n",
         "`-` 이 과정은 단계1-2를 반복하면 된다."
       ],
-      "id": "1e884b94-3091-435d-a26c-4ba5320d13bc"
+      "id": "24e4bd3c-850a-4831-9567-705b300b8363"
     },
     {
       "cell_type": "code",
@@ -663,7 +669,7 @@
         "\n",
         "-   참고로 true 는 (2.5, 4) 였음!!"
       ],
-      "id": "1057adde-c173-4816-ada4-de436b5a7839"
+      "id": "52782687-35bf-4e0b-a7b1-dcf7569f2f7d"
     },
     {
       "cell_type": "code",
@@ -681,7 +687,7 @@
       "source": [
         "`-` 반복결과를 시각화하면?"
       ],
-      "id": "04758c48-9eef-49e7-a15f-1bc7621a1075"
+      "id": "2da98902-4d5e-45c9-af0c-4053a3e00fe4"
     },
     {
       "cell_type": "code",
@@ -710,7 +716,7 @@
         "\n",
         "`-` 뭐 할까? ㅎㅎ"
       ],
-      "id": "dba91daa-d20e-4d25-9a88-bb40268c36d2"
+      "id": "932b89b6-13f0-4385-bae6-7a9d7dea8ce4"
     }
   ],
   "nbformat": 4,
