--- a/docs/posts/02wk-1.out.ipynb
+++ b/docs/posts/02wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "619c3b56-d492-46b4-9cf6-d06524f9bca4"
+      "id": "7bd0ac8b-18ae-44e2-bd92-68ab1dcfddc1"
     },
     {
       "cell_type": "code",
@@ -53,7 +53,7 @@
         "\n",
         "라는 생각을 하게 되었고 이를 위하여 아래와 같이 100개의 데이터를 모았다."
       ],
-      "id": "81860ec1-0291-497c-ae69-bfa1958e527b"
+      "id": "6808a118-cfc5-431e-8492-3c8b42c75207"
     },
     {
       "cell_type": "code",
@@ -108,7 +108,7 @@
         "\n",
         "[1] 판매량이 소수점이고 심지어 음수인것은 그냥 그려러니 하자.."
       ],
-      "id": "e34ba34c-bf0a-4f25-98ac-cc730b8949f9"
+      "id": "a172bf4d-52a8-40b1-9d91-2deda5457f60"
     },
     {
       "cell_type": "code",
@@ -170,7 +170,7 @@
         "\n",
         "`-` 현재까지의 상황을 파이토치로 코딩하면 아래와 같다."
       ],
-      "id": "648fe78f-bf35-4ae2-b47a-ad0d3c8aaf1e"
+      "id": "7178555b-2ebc-4dff-912d-eafbe3d995b8"
     },
     {
       "cell_type": "code",
@@ -204,7 +204,7 @@
         "이라고 표현할 수 있다. 이 의미는 아래의 그림에서 주황색 점선으로\n",
         "커피판매량을 예측한다는 의미이다."
       ],
-      "id": "d178a77a-1f8d-4ff6-97b2-8c6dce6f4653"
+      "id": "f0e5da09-a03c-402f-bb61-e56407424295"
     },
     {
       "cell_type": "code",
@@ -255,7 +255,7 @@
         "\n",
         "`-` 방법1: 이론적으로 추론 \\<- 회귀분석시간에 배운것"
       ],
-      "id": "c451b6d2-a891-42d6-8645-032a2329f8c0"
+      "id": "06e03c2e-b98b-499b-8981-0aeca0353d0a"
     },
     {
       "cell_type": "code",
@@ -301,7 +301,7 @@
         "\n",
         "## A. 문제셋팅 다시 복습"
       ],
-      "id": "0156a2ad-bb02-4f7f-9c53-a8ee75e69d27"
+      "id": "e1de3075-cfab-4d16-bfed-867c8754f0d0"
     },
     {
       "cell_type": "code",
@@ -322,7 +322,7 @@
       "source": [
         "## B. 1단계 – 최초의 점선"
       ],
-      "id": "9484743a-0960-45fa-8f2f-7f64cb4eda05"
+      "id": "d7189e6d-3fd9-4fc3-bfa7-fdf43c8d576c"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "0073b762-bc0d-4997-97b1-44afb824d044"
+      "id": "d5af3fad-857d-44b2-9024-672dfa4047ca"
     },
     {
       "cell_type": "code",
@@ -441,7 +441,7 @@
         "\n",
         "[2] $\\left|\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})\\right|$"
       ],
-      "id": "c9c0cbd5-180c-4ad1-b3e5-9d851bdf20cc"
+      "id": "67b0936b-4fbc-4574-93db-d71bbce66829"
     },
     {
       "cell_type": "code",
@@ -467,7 +467,7 @@
       "source": [
         "(실행후)"
       ],
-      "id": "2d6b3e28-141d-4b0c-add0-9e2ef8c5f053"
+      "id": "f6d09051-7843-4a9e-8c8d-f00b85dc9bb9"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "646ab971-82fe-4ae7-b88a-9e9206840822"
+      "id": "459d79b0-c230-4480-b4a6-dd35d80b49e3"
     },
     {
       "cell_type": "code",
@@ -537,7 +537,7 @@
         "\n",
         "라고 볼 수 있다. 이를 이용하여 근사계산하면"
       ],
-      "id": "a8842b74-cd90-4551-8344-9b5ca4f570a5"
+      "id": "772dff1b-b7b7-45c8-a5d1-b54bbd9f1071"
     },
     {
       "cell_type": "code",
@@ -588,7 +588,7 @@
       "source": [
         "이 값은 `What.grad`에 저장된 값과 거의 비슷하다."
       ],
-      "id": "27bc9c99-8de1-4308-bd68-b84adae48920"
+      "id": "69ea3422-de56-4ab2-99f4-883484ad2f70"
     },
     {
       "cell_type": "code",
@@ -608,7 +608,7 @@
         "\n",
         "$$\\hat{\\bf W} \\leftarrow \\hat{\\bf W} - \\alpha \\times \\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})$$"
       ],
-      "id": "27fe0011-966f-46b6-8d06-f71a751d6b02"
+      "id": "f8a68bbd-48dc-4ddf-b732-7ec0598f2732"
     },
     {
       "cell_type": "code",
@@ -650,7 +650,7 @@
         "\n",
         "`-` 1회 수정결과를 시각화"
       ],
-      "id": "6c5d3b12-5f8a-405e-9b6d-9545d5554d6e"
+      "id": "474cf084-cdf8-4198-b5f9-bef34d49236b"
     },
     {
       "cell_type": "code",
@@ -691,7 +691,7 @@
       "source": [
         "## D. 3단계 – iteration (=learn = estimate $\\bf{\\hat W}$)"
       ],
-      "id": "aaf38053-7436-4bba-8e9a-87b924778aa6"
+      "id": "cc4947dc-1dac-455e-91f1-21b26ffe9019"
     },
     {
       "cell_type": "code",
@@ -760,7 +760,7 @@
         "\n",
         "## A. 단순무식한 print"
       ],
-      "id": "11b0dfdd-5a27-4543-a394-cdb59f1eccfc"
+      "id": "cda0fe96-b323-4062-b870-69cf89a2dc07"
     },
     {
       "cell_type": "code",
@@ -825,7 +825,7 @@
       "source": [
         "## B. 반복시각화 – yhat의 관점에서!"
       ],
-      "id": "93c3d3d0-738c-4cfa-8ea1-b3c42b2c9225"
+      "id": "43086d75-693e-4c35-8f6c-3609290f91a3"
     },
     {
       "cell_type": "code",
@@ -861,7 +861,7 @@
       "source": [
         "## C. 반복시각화 – loss의 관점에서!!"
       ],
-      "id": "c1b4af52-587f-473d-809a-1adcece6e140"
+      "id": "14b39db5-e9ba-4c23-b5e4-086d2faef0dc"
     },
     {
       "cell_type": "code",
@@ -1014,7 +1014,7 @@
       "source": [
         "## D. 애니메이션"
       ],
-      "id": "90f230eb-dcc3-441f-916b-dd5aaf570112"
+      "id": "1fe8b566-95e1-437a-9c9c-cbcd7a4333ee"
     },
     {
       "cell_type": "code",
@@ -1039,7 +1039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 180,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1051,6 +1051,7 @@
         "\n",
         "    ## 2. 학습 + 학습과정기록\n",
         "    What= torch.tensor([[-5.0],[10.0]],requires_grad=True)\n",
+        "    What_history.append(What.data.tolist())\n",
         "    for epoc in range(30): \n",
         "        yhat=X@What ; yhat_history.append(yhat.data.tolist())\n",
         "        loss=torch.sum((y-yhat)**2); loss_history.append(loss.item())\n",
@@ -1089,7 +1090,7 @@
         "    def animate(epoc):\n",
         "        line.set_ydata(yhat_history[epoc])\n",
         "        ax2.scatter(np.array(What_history)[epoc,0],np.array(What_history)[epoc,1],loss_history[epoc],color='grey')\n",
-        "        fig.suptitle(f\"alpha = {alpha} / epoch = {epoc+1}\")\n",
+        "        fig.suptitle(f\"alpha = {alpha} / epoch = {epoc}\")\n",
         "        return line\n",
         "\n",
         "    ani = animation.FuncAnimation(fig, animate, frames=30)\n",
@@ -1099,8 +1100,17 @@
       "id": "d0face1f-4984-48a5-95b5-477980bf6b33"
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> epoch = 0 부터 시작하여 시작점에서 출발하도록 애니메이션을\n",
+        "> 수정했습니당."
+      ],
+      "id": "a50f63aa-08c5-44e7-bfa9-9d52d90aa55f"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 181,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1117,11 +1127,11 @@
         "\n",
         "`-` $\\alpha$가 너무 작다면 비효율적임"
       ],
-      "id": "7ae37e87-a02b-4c5a-99e4-f2f4293ed51c"
+      "id": "004a503e-8c7b-4eb3-a869-56bcf4481e61"
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 182,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1135,11 +1145,11 @@
       "source": [
         "`-` $\\alpha$가 크다고 무조건 좋은건 또 아님"
       ],
-      "id": "4416273b-f77e-401d-9a95-e42fbc111d73"
+      "id": "b28a15af-05d1-4b08-ba21-75768b8b3dde"
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 183,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1153,11 +1163,11 @@
       "source": [
         "`-` 수틀리면 수렴안할수도??"
       ],
-      "id": "61b0166e-b76c-4a58-b437-4d6c52e0f984"
+      "id": "e28a5ad3-4c7c-4bba-9ec1-d2eea107ea0d"
     },
     {
       "cell_type": "code",
-      "execution_count": 417,
+      "execution_count": 184,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1171,11 +1181,11 @@
       "source": [
         "`-` 그냥 망할수도??"
       ],
-      "id": "9914c62b-788c-406f-b9cb-c7060f1363e8"
+      "id": "a1147391-9c81-4e46-b611-d0545426d83a"
     },
     {
       "cell_type": "code",
-      "execution_count": 418,
+      "execution_count": 185,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1195,7 +1205,7 @@
         "\n",
         "벡터미분"
       ],
-      "id": "8211b754-443f-434f-bd04-6f703ef826c6"
+      "id": "451b0ca1-219a-4781-9b62-ab811824fe10"
     }
   ],
   "nbformat": 4,
