--- a/docs/posts/02wk-1.out.ipynb
+++ b/docs/posts/02wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 02wk-1: 딥러닝의 기초 (2)\n",
+        "# 02wk-1: 딥러닝의 기초 (2) – Step1 ~ 4\n",
         "\n",
         "최규빈  \n",
         "2024-03-11\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "7bd0ac8b-18ae-44e2-bd92-68ab1dcfddc1"
+      "id": "907b75c3-1ce1-404c-a606-c21892093e95"
     },
     {
       "cell_type": "code",
@@ -53,7 +53,7 @@
         "\n",
         "라는 생각을 하게 되었고 이를 위하여 아래와 같이 100개의 데이터를 모았다."
       ],
-      "id": "6808a118-cfc5-431e-8492-3c8b42c75207"
+      "id": "6dad43f0-fe8a-4fc0-8a0e-c731ecb318a6"
     },
     {
       "cell_type": "code",
@@ -108,7 +108,7 @@
         "\n",
         "[1] 판매량이 소수점이고 심지어 음수인것은 그냥 그려러니 하자.."
       ],
-      "id": "a172bf4d-52a8-40b1-9d91-2deda5457f60"
+      "id": "bd77f6d3-5677-4de4-be93-3640d8ccfb3c"
     },
     {
       "cell_type": "code",
@@ -170,7 +170,7 @@
         "\n",
         "`-` 현재까지의 상황을 파이토치로 코딩하면 아래와 같다."
       ],
-      "id": "7178555b-2ebc-4dff-912d-eafbe3d995b8"
+      "id": "337c2faf-b960-4195-a3b8-80130ee7f103"
     },
     {
       "cell_type": "code",
@@ -204,7 +204,7 @@
         "이라고 표현할 수 있다. 이 의미는 아래의 그림에서 주황색 점선으로\n",
         "커피판매량을 예측한다는 의미이다."
       ],
-      "id": "f0e5da09-a03c-402f-bb61-e56407424295"
+      "id": "7b8529c4-40f9-4221-aef8-d445eef2461f"
     },
     {
       "cell_type": "code",
@@ -255,7 +255,7 @@
         "\n",
         "`-` 방법1: 이론적으로 추론 \\<- 회귀분석시간에 배운것"
       ],
-      "id": "06e03c2e-b98b-499b-8981-0aeca0353d0a"
+      "id": "f5c2d7e6-bb44-4089-80ed-346f3c5826f4"
     },
     {
       "cell_type": "code",
@@ -301,7 +301,7 @@
         "\n",
         "## A. 문제셋팅 다시 복습"
       ],
-      "id": "e1de3075-cfab-4d16-bfed-867c8754f0d0"
+      "id": "e1de8b86-3eb9-4528-bfd8-58e989def108"
     },
     {
       "cell_type": "code",
@@ -322,7 +322,7 @@
       "source": [
         "## B. 1단계 – 최초의 점선"
       ],
-      "id": "d7189e6d-3fd9-4fc3-bfa7-fdf43c8d576c"
+      "id": "1871e7b5-ab6f-4baa-b410-3498ff66c896"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "d5af3fad-857d-44b2-9024-672dfa4047ca"
+      "id": "4d8defe2-2ed2-4ab4-ac9d-452ea30016b3"
     },
     {
       "cell_type": "code",
@@ -441,7 +441,7 @@
         "\n",
         "[2] $\\left|\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})\\right|$"
       ],
-      "id": "67b0936b-4fbc-4574-93db-d71bbce66829"
+      "id": "611bfb8d-2d34-4c47-80ed-45c6f6a816ca"
     },
     {
       "cell_type": "code",
@@ -467,7 +467,7 @@
       "source": [
         "(실행후)"
       ],
-      "id": "f6d09051-7843-4a9e-8c8d-f00b85dc9bb9"
+      "id": "a3011c36-6860-40d9-9f7f-47718d68da03"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "459d79b0-c230-4480-b4a6-dd35d80b49e3"
+      "id": "6128da5c-0b62-43b6-9818-1347df050583"
     },
     {
       "cell_type": "code",
@@ -537,7 +537,7 @@
         "\n",
         "라고 볼 수 있다. 이를 이용하여 근사계산하면"
       ],
-      "id": "772dff1b-b7b7-45c8-a5d1-b54bbd9f1071"
+      "id": "06157a8b-639e-47a8-8a2f-606d2491b151"
     },
     {
       "cell_type": "code",
@@ -588,7 +588,7 @@
       "source": [
         "이 값은 `What.grad`에 저장된 값과 거의 비슷하다."
       ],
-      "id": "69ea3422-de56-4ab2-99f4-883484ad2f70"
+      "id": "ea51f0ad-550c-464f-83f9-0c889258b9c1"
     },
     {
       "cell_type": "code",
@@ -608,7 +608,7 @@
         "\n",
         "$$\\hat{\\bf W} \\leftarrow \\hat{\\bf W} - \\alpha \\times \\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})$$"
       ],
-      "id": "f8a68bbd-48dc-4ddf-b732-7ec0598f2732"
+      "id": "48adc08a-6df7-47a6-bc15-d5c807e151c8"
     },
     {
       "cell_type": "code",
@@ -650,7 +650,7 @@
         "\n",
         "`-` 1회 수정결과를 시각화"
       ],
-      "id": "474cf084-cdf8-4198-b5f9-bef34d49236b"
+      "id": "726c0503-8361-4c7d-94ad-75396872c840"
     },
     {
       "cell_type": "code",
@@ -691,7 +691,7 @@
       "source": [
         "## D. 3단계 – iteration (=learn = estimate $\\bf{\\hat W}$)"
       ],
-      "id": "cc4947dc-1dac-455e-91f1-21b26ffe9019"
+      "id": "8dfc3a01-e6c1-416d-a5b2-71c8bb1b4fd4"
     },
     {
       "cell_type": "code",
@@ -760,7 +760,7 @@
         "\n",
         "## A. 단순무식한 print"
       ],
-      "id": "cda0fe96-b323-4062-b870-69cf89a2dc07"
+      "id": "dfd4d48f-2ba9-443a-aa2c-0b4973f7c4c7"
     },
     {
       "cell_type": "code",
@@ -825,7 +825,7 @@
       "source": [
         "## B. 반복시각화 – yhat의 관점에서!"
       ],
-      "id": "43086d75-693e-4c35-8f6c-3609290f91a3"
+      "id": "93a0c854-b9a2-49d4-ab49-4d535f58b9a6"
     },
     {
       "cell_type": "code",
@@ -861,7 +861,7 @@
       "source": [
         "## C. 반복시각화 – loss의 관점에서!!"
       ],
-      "id": "14b39db5-e9ba-4c23-b5e4-086d2faef0dc"
+      "id": "54ddfb1d-6dd2-4ede-ab4f-1ec14aaae9ab"
     },
     {
       "cell_type": "code",
@@ -1014,7 +1014,7 @@
       "source": [
         "## D. 애니메이션"
       ],
-      "id": "1fe8b566-95e1-437a-9c9c-cbcd7a4333ee"
+      "id": "f47902c8-8862-4736-b447-490bb3cb06ef"
     },
     {
       "cell_type": "code",
@@ -1106,7 +1106,7 @@
         "> epoch = 0 부터 시작하여 시작점에서 출발하도록 애니메이션을\n",
         "> 수정했습니당."
       ],
-      "id": "a50f63aa-08c5-44e7-bfa9-9d52d90aa55f"
+      "id": "9e965351-f184-452d-b5ca-a62ca8a33f0a"
     },
     {
       "cell_type": "code",
@@ -1127,7 +1127,7 @@
         "\n",
         "`-` $\\alpha$가 너무 작다면 비효율적임"
       ],
-      "id": "004a503e-8c7b-4eb3-a869-56bcf4481e61"
+      "id": "9483673a-3c2b-47ff-8f88-3988a70e0808"
     },
     {
       "cell_type": "code",
@@ -1145,7 +1145,7 @@
       "source": [
         "`-` $\\alpha$가 크다고 무조건 좋은건 또 아님"
       ],
-      "id": "b28a15af-05d1-4b08-ba21-75768b8b3dde"
+      "id": "6e6ad6e3-2aa2-4402-a87f-7b7467bb4b27"
     },
     {
       "cell_type": "code",
@@ -1163,7 +1163,7 @@
       "source": [
         "`-` 수틀리면 수렴안할수도??"
       ],
-      "id": "e28a5ad3-4c7c-4bba-9ec1-d2eea107ea0d"
+      "id": "9fc2bb7d-4861-438e-b3a9-114b4ac39259"
     },
     {
       "cell_type": "code",
@@ -1181,7 +1181,7 @@
       "source": [
         "`-` 그냥 망할수도??"
       ],
-      "id": "a1147391-9c81-4e46-b611-d0545426d83a"
+      "id": "706d4649-83c7-4d11-b291-8a97ac6a66b7"
     },
     {
       "cell_type": "code",
@@ -1205,7 +1205,7 @@
         "\n",
         "벡터미분"
       ],
-      "id": "451b0ca1-219a-4781-9b62-ab811824fe10"
+      "id": "2fc07c74-34bf-4b1c-9be8-2c7e14efadc0"
     }
   ],
   "nbformat": 4,
@@ -1226,7 +1226,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.8"
     }
   }
 }
