--- a/docs/posts/02wk-2.out.ipynb
+++ b/docs/posts/02wk-2.out.ipynb
@@ -7,33 +7,17 @@
         "# 02wk-2: 딥러닝의 기초 (3) – Step1,2,4 의 변형\n",
         "\n",
         "최규빈  \n",
-        "2024-03-11\n",
+        "2024-03-13\n",
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/02wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "b65026f0-6e7b-4108-b734-38cde7ab0296"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-wdw3rc9ka0a_JSpsth-XBO&si=Vct3AMxWuodtSlzX >}}"
-      ],
-      "id": "0b96ce25-731b-4af0-9bd1-9dd519c41166"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-xrw8e2pQ1KqKFb-i3lVtsI&si=dDAjAteouM7Y30HU>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "1bb053a6-88e2-4554-9551-95460d4dc4ca"
+      "id": "996d1c0e-393a-49e4-a023-74b4e8fa3031"
     },
     {
       "cell_type": "code",
@@ -57,7 +41,7 @@
         "\n",
         "## A. Data"
       ],
-      "id": "e3688bfa-ede0-4536-8f39-61be09535097"
+      "id": "9103a1d1-d462-4d82-8e5b-4d5b861500a2"
     },
     {
       "cell_type": "code",
@@ -108,7 +92,7 @@
         "\n",
         "`-` 외우세여"
       ],
-      "id": "abfdf4ee-ef23-4d85-af0c-ba39e7816998"
+      "id": "627c290a-950b-4389-978a-3d6e03d32b5a"
     },
     {
       "cell_type": "code",
@@ -138,7 +122,7 @@
       "source": [
         "`-` 결과 시각화"
       ],
-      "id": "45303e89-5497-47eb-8350-8c60f93f421f"
+      "id": "006c43c1-1243-43d8-8605-d052a8e3d6f0"
     },
     {
       "cell_type": "code",
@@ -170,7 +154,7 @@
         "\n",
         "`-` 수정된 코드"
       ],
-      "id": "9bf537ad-9057-43d0-bc39-67e7d7ed01ee"
+      "id": "6c2405d6-c86f-413b-9613-e6de8ec5dfb9"
     },
     {
       "cell_type": "code",
@@ -203,7 +187,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "35b0c864-969e-4011-adb5-4ca222e72769"
+      "id": "059a1879-9450-471c-8462-a5cee3eac254"
     },
     {
       "cell_type": "code",
@@ -237,7 +221,7 @@
         "\n",
         "원래 yhat을 이런식으로 구했는데 ~"
       ],
-      "id": "d0501115-7164-428f-85c1-8a9b6d7c1bfb"
+      "id": "ba1bc9be-133e-40d7-afd5-0dc09410ade7"
     },
     {
       "cell_type": "code",
@@ -258,7 +242,7 @@
       "source": [
         "이런식으로도 구할수 있음!"
       ],
-      "id": "8fc4ad06-9954-4fc1-be46-9887ae3d7961"
+      "id": "fcdcb582-fe4b-41b4-8caf-67e7f239babb"
     },
     {
       "cell_type": "code",
@@ -307,7 +291,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "527ac992-eb34-414c-b8cb-43ff8af69ac8"
+      "id": "0997fea0-5c33-48ae-a068-384d7b2055cd"
     },
     {
       "cell_type": "code",
@@ -345,7 +329,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "a8d48946-49c6-4aa1-b709-6f97651d7d1f"
+      "id": "991fe44e-e578-4d3f-95c1-daf6fafa8753"
     },
     {
       "cell_type": "code",
@@ -379,7 +363,7 @@
         "\n",
         "`-` 준비과정"
       ],
-      "id": "e712def2-b2b7-4e28-90a9-e08e6f3144ba"
+      "id": "2875225e-3654-40d1-a1f6-f11204a2810e"
     },
     {
       "cell_type": "code",
@@ -409,7 +393,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "14a6e718-e66b-44e5-bcf4-49ed24727a59"
+      "id": "e7cad0b8-e882-4c45-8a45-d298774f369d"
     },
     {
       "cell_type": "code",
@@ -452,7 +436,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "4b918a5c-f50d-4656-9e0b-658c4bb0723a"
+      "id": "d0242d64-9a85-4b71-9014-c114d07130bb"
     },
     {
       "cell_type": "code",
@@ -494,7 +478,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "85ac282d-dbc8-47ad-95a8-61f8241da033"
+      "id": "80e5adef-f64a-41bf-9ad1-5c865f0c0818"
     },
     {
       "cell_type": "code",
@@ -536,7 +520,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "7ac1bea3-3288-45f8-922f-de0ce45593d3"
+      "id": "7879cc01-88a6-46bd-a990-591c9d0f13f3"
     },
     {
       "cell_type": "code",
@@ -580,7 +564,7 @@
         "\n",
         "`-` 준비과정 – 옵티마이저라는 오브젝트를 셋팅한다!"
       ],
-      "id": "feb83d79-e2a5-403b-9c64-ab7789d095be"
+      "id": "a1ecef6c-7fc2-4de5-bb1f-812ec2644f41"
     },
     {
       "cell_type": "code",
@@ -612,7 +596,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "9b51e6fd-c422-4fc9-9271-acaea968e3d6"
+      "id": "051db557-f243-4e72-bd30-0995713b7b4d"
     },
     {
       "cell_type": "code",
@@ -655,7 +639,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "e1ee9f9a-e5db-4f82-a8b4-cac171835df2"
+      "id": "4d4a10b2-4756-42cc-ac0e-949ca5c7bb5e"
     },
     {
       "cell_type": "code",
@@ -697,7 +681,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "f3d393e0-41d5-4fc4-aabd-70b79dab90ba"
+      "id": "a83530d5-a4d9-4697-9d45-71be02ac1741"
     },
     {
       "cell_type": "code",
@@ -740,7 +724,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "f3e38500-48b8-458c-b138-362128466212"
+      "id": "22aa0fa8-e9cc-4376-8d27-2bbf45bb21e4"
     },
     {
       "cell_type": "code",
@@ -785,7 +769,7 @@
         "\n",
         "`-` 학습"
       ],
-      "id": "7839cbbf-d971-48d4-9d84-9460b2255fb3"
+      "id": "d5cb2e8f-59fd-4e50-8c7e-7a63b83d8ff3"
     },
     {
       "cell_type": "code",
@@ -825,7 +809,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "1e96ec65-0874-4c85-972b-60acba8711da"
+      "id": "a47ac5b4-4592-4a24-9905-c2f5907e6a9e"
     },
     {
       "cell_type": "code",
