--- a/docs/posts/02wk-2.out.ipynb
+++ b/docs/posts/02wk-2.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 02wk-2: 딥러닝의 기초 (3) – Step1,2,4 의 변형\n",
+        "# 02wk-2: 회귀모형 (3) – Step1,2,4 의 변형\n",
         "\n",
         "최규빈  \n",
         "2024-03-13\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "996d1c0e-393a-49e4-a023-74b4e8fa3031"
+      "id": "ae869bf7-c180-4c03-a51d-fd97ccb35e5e"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "## A. Data"
       ],
-      "id": "9103a1d1-d462-4d82-8e5b-4d5b861500a2"
+      "id": "bd5e1513-9a35-4c50-bf65-997a4ede731a"
     },
     {
       "cell_type": "code",
@@ -92,7 +92,7 @@
         "\n",
         "`-` 외우세여"
       ],
-      "id": "627c290a-950b-4389-978a-3d6e03d32b5a"
+      "id": "74fd07c4-d6cf-4589-9898-ab17260788e0"
     },
     {
       "cell_type": "code",
@@ -122,7 +122,7 @@
       "source": [
         "`-` 결과 시각화"
       ],
-      "id": "006c43c1-1243-43d8-8605-d052a8e3d6f0"
+      "id": "772fce5f-1611-4e0c-b70c-f39891e4700e"
     },
     {
       "cell_type": "code",
@@ -154,7 +154,7 @@
         "\n",
         "`-` 수정된 코드"
       ],
-      "id": "6c2405d6-c86f-413b-9613-e6de8ec5dfb9"
+      "id": "ad3a7ab7-f8e4-4839-a895-0ca72de137f8"
     },
     {
       "cell_type": "code",
@@ -187,7 +187,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "059a1879-9450-471c-8462-a5cee3eac254"
+      "id": "28182e0c-1e91-4c08-891a-be2c280afbb3"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "\n",
         "원래 yhat을 이런식으로 구했는데 ~"
       ],
-      "id": "ba1bc9be-133e-40d7-afd5-0dc09410ade7"
+      "id": "b61ea54a-5367-4a4b-bc90-a7fb7f77fb38"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
       "source": [
         "이런식으로도 구할수 있음!"
       ],
-      "id": "fcdcb582-fe4b-41b4-8caf-67e7f239babb"
+      "id": "d7c97ee9-d20b-4330-9c36-db627b52373f"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "0997fea0-5c33-48ae-a068-384d7b2055cd"
+      "id": "18cb6bd3-630d-49f3-8694-36ec966543fc"
     },
     {
       "cell_type": "code",
@@ -329,7 +329,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "991fe44e-e578-4d3f-95c1-daf6fafa8753"
+      "id": "91230510-af36-40a6-a98c-cdd45926fd53"
     },
     {
       "cell_type": "code",
@@ -363,7 +363,7 @@
         "\n",
         "`-` 준비과정"
       ],
-      "id": "2875225e-3654-40d1-a1f6-f11204a2810e"
+      "id": "a2bd8f19-a572-40c9-83dc-1bc9cd4b2531"
     },
     {
       "cell_type": "code",
@@ -393,7 +393,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "e7cad0b8-e882-4c45-8a45-d298774f369d"
+      "id": "976a0d1d-0e4c-4f98-8660-6b340eb9ae7d"
     },
     {
       "cell_type": "code",
@@ -436,7 +436,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "d0242d64-9a85-4b71-9014-c114d07130bb"
+      "id": "1610dadb-771e-4806-ad7a-0e7321d870b1"
     },
     {
       "cell_type": "code",
@@ -478,7 +478,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "80e5adef-f64a-41bf-9ad1-5c865f0c0818"
+      "id": "22d705fe-aa94-42cb-ae6b-dda74e4193f4"
     },
     {
       "cell_type": "code",
@@ -520,7 +520,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "7879cc01-88a6-46bd-a990-591c9d0f13f3"
+      "id": "0ead5387-7315-40a0-a90f-95feefe01e0e"
     },
     {
       "cell_type": "code",
@@ -564,7 +564,7 @@
         "\n",
         "`-` 준비과정 – 옵티마이저라는 오브젝트를 셋팅한다!"
       ],
-      "id": "a1ecef6c-7fc2-4de5-bb1f-812ec2644f41"
+      "id": "3464f287-da47-4768-9ce4-1b3b0c03340b"
     },
     {
       "cell_type": "code",
@@ -596,7 +596,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "051db557-f243-4e72-bd30-0995713b7b4d"
+      "id": "febf4f9c-e7c1-46f0-abb6-2c7dfa2f5031"
     },
     {
       "cell_type": "code",
@@ -639,7 +639,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "4d4a10b2-4756-42cc-ac0e-949ca5c7bb5e"
+      "id": "597be39b-9705-4267-95ad-c6ce71c711db"
     },
     {
       "cell_type": "code",
@@ -681,7 +681,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "a83530d5-a4d9-4697-9d45-71be02ac1741"
+      "id": "ced55b23-fd47-4f36-ab81-26ec80216f5d"
     },
     {
       "cell_type": "code",
@@ -724,7 +724,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "22aa0fa8-e9cc-4376-8d27-2bbf45bb21e4"
+      "id": "7c3a0082-0890-4d4f-9852-d848a8c1e40f"
     },
     {
       "cell_type": "code",
@@ -769,7 +769,7 @@
         "\n",
         "`-` 학습"
       ],
-      "id": "d5cb2e8f-59fd-4e50-8c7e-7a63b83d8ff3"
+      "id": "d162ed64-6c38-4726-90f4-cde193a4c2d6"
     },
     {
       "cell_type": "code",
@@ -809,7 +809,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "a47ac5b4-4592-4a24-9905-c2f5907e6a9e"
+      "id": "7517edfe-678b-4a18-ae27-4713f09639e2"
     },
     {
       "cell_type": "code",
