--- a/posts/02wk-2.ipynb
+++ b/posts/02wk-2.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "---\n",
-    "title: \"02wk-2: 딥러닝의 기초 (3) -- Step1,2,4 의 변형\"\n",
+    "title: \"02wk-2: 회귀모형 (3) -- Step1,2,4 의 변형\"\n",
     "author: \"최규빈\"\n",
     "date: \"03/13/2024\"\n",
     "---"
