--- a/docs/posts/02wk-1.out.ipynb
+++ b/docs/posts/02wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 02wk-1: 딥러닝의 기초 (2) – Step1 ~ 4\n",
+        "# 02wk-1: 회귀모형 (2) – Step1 ~ 4\n",
         "\n",
         "최규빈  \n",
         "2024-03-11\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "180a8eff-c975-4e13-b7b0-6f8c835c0fb4"
+      "id": "d451bf8b-b17d-43d3-bd15-6aab16fbc4aa"
     },
     {
       "cell_type": "code",
@@ -53,7 +53,7 @@
         "\n",
         "라는 생각을 하게 되었고 이를 위하여 아래와 같이 100개의 데이터를 모았다."
       ],
-      "id": "769a6e0f-8582-47d2-af32-ba8c93184eaf"
+      "id": "fd46de47-bc01-4852-9c32-bac298e1b570"
     },
     {
       "cell_type": "code",
@@ -108,7 +108,7 @@
         "\n",
         "[1] 판매량이 소수점이고 심지어 음수인것은 그냥 그려러니 하자.."
       ],
-      "id": "4cebfe8d-52af-4d79-a3aa-b8a9676c7f0a"
+      "id": "61b165a8-6df2-4ef3-b133-a9aa2dccc943"
     },
     {
       "cell_type": "code",
@@ -170,7 +170,7 @@
         "\n",
         "`-` 현재까지의 상황을 파이토치로 코딩하면 아래와 같다."
       ],
-      "id": "3f3904a4-2b85-4402-9898-9a24ebc09245"
+      "id": "88cb9a0a-7cf4-44c9-bb68-1028a7e10d03"
     },
     {
       "cell_type": "code",
@@ -204,7 +204,7 @@
         "이라고 표현할 수 있다. 이 의미는 아래의 그림에서 주황색 점선으로\n",
         "커피판매량을 예측한다는 의미이다."
       ],
-      "id": "a099a87a-25b1-43c4-84ea-ddb868fd45f5"
+      "id": "99bccac2-fa58-4b75-b4a4-a29edff948be"
     },
     {
       "cell_type": "code",
@@ -255,7 +255,7 @@
         "\n",
         "`-` 방법1: 이론적으로 추론 \\<- 회귀분석시간에 배운것"
       ],
-      "id": "8566c27f-ed65-4fe6-b78a-4aa5628dda53"
+      "id": "4b3aeb7e-cee2-408e-a1ef-14afc36a80bf"
     },
     {
       "cell_type": "code",
@@ -301,7 +301,7 @@
         "\n",
         "## A. 문제셋팅 다시 복습"
       ],
-      "id": "3dcee648-a3b3-44e8-ab94-387f661eba7a"
+      "id": "f56eed35-ee6e-4bd5-a585-6cbffb54ca8d"
     },
     {
       "cell_type": "code",
@@ -322,7 +322,7 @@
       "source": [
         "## B. 1단계 – 최초의 점선"
       ],
-      "id": "04e909d6-d615-48e9-84ce-74a856b8654b"
+      "id": "e77687f5-a2bc-4fcc-a8ea-bf3831c0f49f"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "867f21f7-4c5f-4848-83c7-95c1615b6759"
+      "id": "7c813707-a34b-4846-b255-fcb667ec8163"
     },
     {
       "cell_type": "code",
@@ -441,7 +441,7 @@
         "\n",
         "[2] $\\left|\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})\\right|$"
       ],
-      "id": "735eb280-4389-41c0-95d9-9848bce5075c"
+      "id": "a9e60ae8-9531-493f-887b-b3d52789a61d"
     },
     {
       "cell_type": "code",
@@ -467,7 +467,7 @@
       "source": [
         "(실행후)"
       ],
-      "id": "83658f74-1b0b-4786-8e6f-6caea7cc396e"
+      "id": "bd80ad2e-2dbb-4b1f-adc8-97996411c3e5"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "282b2e0b-70a4-4962-81c9-86b9fd9b6301"
+      "id": "e38cf2ac-14f7-48b8-8375-bd9e7c2945ed"
     },
     {
       "cell_type": "code",
@@ -537,7 +537,7 @@
         "\n",
         "라고 볼 수 있다. 이를 이용하여 근사계산하면"
       ],
-      "id": "39d26493-39bf-4120-bce4-fb3e313792aa"
+      "id": "fbca35c9-4c2e-4075-bed2-82be7e546652"
     },
     {
       "cell_type": "code",
@@ -588,7 +588,7 @@
       "source": [
         "이 값은 `What.grad`에 저장된 값과 거의 비슷하다."
       ],
-      "id": "c76201f9-8bd5-434e-ad78-d8cfcde413cf"
+      "id": "4fc676c8-e7ee-45de-91c3-d5f2ed049f19"
     },
     {
       "cell_type": "code",
@@ -608,7 +608,7 @@
         "\n",
         "$$\\hat{\\bf W} \\leftarrow \\hat{\\bf W} - \\alpha \\times \\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})$$"
       ],
-      "id": "52b152df-7b07-42bd-ad0a-cebab9a2645a"
+      "id": "ff3dd61b-af7c-451d-94d2-e206fb1379b3"
     },
     {
       "cell_type": "code",
@@ -650,7 +650,7 @@
         "\n",
         "`-` 1회 수정결과를 시각화"
       ],
-      "id": "a9f2bc7d-ccc7-4767-bcb6-5b3ea8998343"
+      "id": "0da13e19-109e-4c7a-b870-965cc875af53"
     },
     {
       "cell_type": "code",
@@ -691,7 +691,7 @@
       "source": [
         "## D. 3단계 – iteration (=learn = estimate $\\bf{\\hat W}$)"
       ],
-      "id": "d9ffef08-40b9-47c3-9149-49125bfc1496"
+      "id": "95b6ae5b-86dc-46ca-85e3-0f3115e16370"
     },
     {
       "cell_type": "code",
@@ -760,7 +760,7 @@
         "\n",
         "## A. 단순무식한 print"
       ],
-      "id": "6a9a27c0-0a58-4d94-9b2c-9865ce4afa94"
+      "id": "a7b86858-7afd-402c-b3a2-1366ae4357fb"
     },
     {
       "cell_type": "code",
@@ -825,7 +825,7 @@
       "source": [
         "## B. 반복시각화 – yhat의 관점에서!"
       ],
-      "id": "9b4fdbea-cf60-42cf-8126-9e3b9bf6e80d"
+      "id": "5ec75947-37c9-4837-9c08-8f26d6473d3b"
     },
     {
       "cell_type": "code",
@@ -861,7 +861,7 @@
       "source": [
         "## C. 반복시각화 – loss의 관점에서!!"
       ],
-      "id": "db98b13c-6965-4ddc-bad3-3e8ce05d3780"
+      "id": "138ffa3b-3c6d-467a-b1ff-c1bf9a2e201f"
     },
     {
       "cell_type": "code",
@@ -1014,7 +1014,7 @@
       "source": [
         "## D. 애니메이션"
       ],
-      "id": "108937d5-0872-499f-9233-e7af36d8a40c"
+      "id": "669c370f-162f-4396-8419-b4346617229e"
     },
     {
       "cell_type": "code",
@@ -1106,7 +1106,7 @@
         "> epoch = 0 부터 시작하여 시작점에서 출발하도록 애니메이션을\n",
         "> 수정했습니당."
       ],
-      "id": "b12e893d-085c-4dd6-90cd-45446794b946"
+      "id": "eb92dd69-9f5a-49e4-a762-be840439c59e"
     },
     {
       "cell_type": "code",
@@ -1127,7 +1127,7 @@
         "\n",
         "`-` $\\alpha$가 너무 작다면 비효율적임"
       ],
-      "id": "7e52d225-71e9-4240-82bf-4f7177fbadfc"
+      "id": "4951469c-3250-48c2-a9cb-28fc9a9d85bd"
     },
     {
       "cell_type": "code",
@@ -1145,7 +1145,7 @@
       "source": [
         "`-` $\\alpha$가 크다고 무조건 좋은건 또 아님"
       ],
-      "id": "3354b61f-203e-432b-b47c-d79a7d73d259"
+      "id": "281ee68e-5533-4717-90ee-a59472a1ae2e"
     },
     {
       "cell_type": "code",
@@ -1163,7 +1163,7 @@
       "source": [
         "`-` 수틀리면 수렴안할수도??"
       ],
-      "id": "9fd6cd97-05b3-4c8f-8870-1750d00f3439"
+      "id": "a6cf92f0-7a87-4469-9f8f-3037ff2696b4"
     },
     {
       "cell_type": "code",
@@ -1181,7 +1181,7 @@
       "source": [
         "`-` 그냥 망할수도??"
       ],
-      "id": "e2d67bdc-752a-4cb3-bb20-12eff2970299"
+      "id": "da4c7651-6aeb-4094-83d0-1090a91b18db"
     },
     {
       "cell_type": "code",
@@ -1205,7 +1205,7 @@
         "\n",
         "벡터미분"
       ],
-      "id": "9c8b2c36-4919-444b-ba9e-01a1d0eb0649"
+      "id": "c1545d0f-5e18-4424-a3ec-10b1b7d8b5b6"
     }
   ],
   "nbformat": 4,
