--- a/posts/02wk-2.ipynb
+++ b/posts/02wk-2.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "---\n",
-    "title: \"02wk-2: 회귀모형 (3) -- Step1,2,4 의 변형\"\n",
+    "title: \"02wk-2: 회귀분석 (3) -- Step1,2,4 의 변형\"\n",
     "author: \"최규빈\"\n",
     "date: \"03/13/2024\"\n",
     "---"
@@ -1009,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
